--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,40 @@
-.div-1 {
-    background-color: tomato;
-    margin-bottom: 20px;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.div-2 {
-    background-color: steelblue;
+body {
+    background: linear-gradient(to right, #f25022, #7fba00, #00a4ef, #ffb900);
+    height: 100%;
 }
 
-.div-1, .div-2 {
-    height: 200px;
-    width: 200px;
+.parent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.box {
+    width: 360px;
+    height: 360px;
+    background-color: rgba(0,0,0,.25);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    position: absolute;
+    top: 385px;
+    left: 875px; 
+    transform: translate(-50%, -50%);
+    width: 150px;
+    height: 150px;
+    background-color: #f25022;
+    box-shadow: 
+        165px 0 0 0 #7fba00, 
+        0 165px 0 0 #00a4ef, 
+        165px 165px 0 0 #ffb900;
 }
